FIX: raise header z-index because tower have z-index 99 element on page

--- a/inject.css
+++ b/inject.css
@@ -15,7 +15,7 @@
 	margin: 0;
 	padding: 14px 0;
 	width: 100%;
-	z-index: 2;
+	z-index: 100;
 	background-color: white;
 	opacity: 0.9;
 	box-shadow: 0px 4px 12px rgba(30,32,24,0.1);
